--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-
+    <!--Тіло-->
     <main>
       <!--Замовлення послуг-->
       <section>
