--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <!--Верхня лінія-->
     <header>
-      <h1>WebStudio</h1>
       <nav>
         <ul>
+          <li><a href="/">WebStudio</a></li>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
@@ -26,35 +26,34 @@
     <main>
       <!--Замовлення послуг-->
       <section>
-        <h2>Шапка замовлення послуг</h2>
-        <p>Ефективні рішення для вашого бізнесу</p>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
       <!--Наші особливості-->
       <section>
-        <h2>Особливості</h2>
+        <h1>Особливості</h1>
         <ul>
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h2>ПУНКТУАЛЬНІСТЬ</h2>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h2>ПЛАНУВАННЯ</h2>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
       <!--Чим ми займаємося-->
       <section>
-        <h2>Чим ми займаємося</h2>
+        <h1>Чим ми займаємося</h1>
         <ul>
           <li>
             <img
@@ -79,26 +78,26 @@
       </section>
       <!--Наша команда-->
       <section>
-        <h2>Наша команда</h2>
+        <h1>Наша команда</h1>
         <ul>
           <li>
             <img src="images/img4.jpg" alt="фото Ігор Дем'яненко" width="270" height="260" />
-            <h4>Ігор Дем'яненко</h4>
+            <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="images/img5.jpg" alt="фото Ольга Рєпіна" width="270" height="260" />
-            <h4>Ольга Рєпіна</h4>
+            <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="images/img6.jpg" alt="фото Микола Тарасов" width="270" height="260" />
-            <h4>Микола Тарасов</h4>
+            <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="images/img7.jpg" alt="фото Михайло Єрмаков" width="270" height="260" />
-            <h4>Михайло Єрмаков</h4>
+            <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -106,11 +105,13 @@
     </main>
     <!--Підвал-->
     <footer>
-      <h1>WebStudio</h1>
       <address>
-        м. Київ, пр-т Лесі Українки, 26 <br />
-        info@devstudio.com <br />
-        +38 096 111 11 11
+        <ul>
+          <li><a href="/">WebStudio</a></li>
+          <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
