в футері логотип змінив теж на посилання

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="/">WebStudio</a></li>
+          <li><a href="./index.html">WebStudio</a></li>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
@@ -107,7 +107,7 @@
     <footer>
       <address>
         <ul>
-          <li><a href="/">WebStudio</a></li>
+          <li><a href="./index.html">WebStudio</a></li>
           <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
