--- a/index.html
+++ b/index.html
@@ -108,7 +108,14 @@
       <address>
         <ul>
           <li><a href="./index.html">WebStudio</a></li>
-          <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li>
+            <a
+              href="https://goo.gl/maps/TMpKUP9idhzFjyQV7"
+              target="_blank"
+              rel="noopener nofollow noreferrer"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
