--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!--Верхня лінія-->
     <header>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="./index.html">WebStudio</a></li>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
@@ -31,29 +31,29 @@
       </section>
       <!--Наші особливості-->
       <section>
-        <h1>Особливості</h1>
+        <h2>Особливості</h2>
         <ul>
           <li>
-            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h2>ПУНКТУАЛЬНІСТЬ</h2>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h2>ПЛАНУВАННЯ</h2>
+            <h3>ПЛАНУВАННЯ</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
       <!--Чим ми займаємося-->
       <section>
-        <h1>Чим ми займаємося</h1>
+        <h2>Чим ми займаємося</h2>
         <ul>
           <li>
             <img
@@ -78,7 +78,7 @@
       </section>
       <!--Наша команда-->
       <section>
-        <h1>Наша команда</h1>
+        <h2>Наша команда</h2>
         <ul>
           <li>
             <img src="images/img4.jpg" alt="фото Ігор Дем'яненко" width="270" height="260" />
@@ -106,8 +106,8 @@
     <!--Підвал-->
     <footer>
       <address>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="./index.html">WebStudio</a></li>
           <li>
             <a
               href="https://goo.gl/maps/TMpKUP9idhzFjyQV7"
